finish setup api doc
