# ts-pg-auth/src/docs/routes/auth.routes.docs.ts
@@ -1,7 +1,8 @@
 import { OpenAPIRegistry } from "@asteasolutions/zod-to-openapi";
-
-import { ParamAuthSchemaDocs } from "../schema/auth.schema.docs";
-import { DefalutResponseSchema } from "../schema/default.schema.docs";
+import {
+ DefalutResponseSchema,
+ ParamSchemaDocs,
+} from "../schema/default.schema.docs";
 import { TagType } from "../types";
 import { z } from "zod";
 import { UserSchemaDocs } from "../schema/user.schema.docs";
@@ -114,7 +115,7 @@ export function RefreshTokenUserApiDoc(
   summary: "Get New Token with Refresh Token User",
   request: {
    cookies: z.object({
-    refresh_token: ParamAuthSchemaDocs(registry, {
+    refresh_token: ParamSchemaDocs(registry, {
      name: "refresh_token",
      inParam: "cookie",
      example: "refresh_token=abcde12345; Path=/; HttpOnly",
@@ -154,7 +155,7 @@ export function VerifyEmailUserApiDoc(
   summary: "Verification Code from Register User",
   request: {
    params: z.object({
-    verificationCode: ParamAuthSchemaDocs(registry, {
+    verificationCode: ParamSchemaDocs(registry, {
      name: "verificationCode",
      inParam: "path",
      example: "1212121",
@@ -187,7 +188,7 @@ export function ForgotPasswordApiDoc(
  tag: TagType
 ): void {
  registry.registerPath({
-  method: "get",
+  method: "post",
   path: "/api/auth/forgotpassword",
   tags: [tag],
   description: "Request for Forgot Password",
@@ -217,6 +218,101 @@ export function ForgotPasswordApiDoc(
      "application/json": {
       schema: DefalutResponseSchema.omit({
        data: true,
+      }),
+     },
+    },
+   },
+   400: {
+    description: "Bad request",
+   },
+  },
+ });
+}
+
+export function ResetPasswordApiDoc(
+ registry: OpenAPIRegistry,
+ tag: TagType
+): void {
+ registry.registerPath({
+  method: "patch",
+  path: "api/auth/resetpassword/{resetToken}",
+  tags: [tag],
+  description: "Reset Password",
+  summary: "Reset Password",
+  request: {
+   params: z.object({
+    resetToken: ParamSchemaDocs(registry, {
+     name: "resetToken",
+     inParam: "path",
+     example: "1212121",
+    }),
+   }),
+   body: {
+    content: {
+     "application/json": {
+      schema: UserSchemaDocs.omit({
+       id: true,
+       name: true,
+       email: true,
+       photo: true,
+       role: true,
+       createdAt: true,
+       updatedAt: true,
+       provider: true,
+      }).extend({
+       passwordConfirm: z.string().openapi({
+        example: "stringPassword123",
+       }),
+      }),
+     },
+    },
+   },
+  },
+  responses: {
+   200: {
+    description: "Object with user data.",
+    content: {
+     "application/json": {
+      schema: DefalutResponseSchema.omit({
+       data: true,
+      }),
+     },
+    },
+   },
+   400: {
+    description: "Bad request",
+   },
+  },
+ });
+}
+
+export function LogOutUserApiDoc(
+ registry: OpenAPIRegistry,
+ tag: TagType
+): void {
+ registry.registerPath({
+  method: "get",
+  path: "/api/auth/logout",
+  tags: [tag],
+  description: "LogOut User",
+  summary: "LogOut User",
+  request: {
+   cookies: z.object({
+    access_token: ParamSchemaDocs(registry, {
+     name: "access_token",
+     inParam: "cookie",
+     example: "access_token=abcde12345; Path=/; HttpOnly",
+    }),
+   }),
+  },
+  responses: {
+   200: {
+    description: "Object with user data.",
+    content: {
+     "application/json": {
+      schema: DefalutResponseSchema.omit({
+       data: true,
+       message: true,
       }),
      },
     },
